--- a/Source/RDCManager/Controls/RDCWindow.xaml
+++ b/Source/RDCManager/Controls/RDCWindow.xaml
@@ -1,11 +1,9 @@
-﻿<UserControl x:Class="RDCManager.Views.ShellView"
+﻿<UserControl x:Class="RDCManager.Controls.RDCWindow"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:ctrl="clr-namespace:RDCManager.Controls"
-             mc:Ignorable="d" >
-    <DockPanel>
-        <ContentControl x:Name="RDCListVM" />
-    </DockPanel>
+             mc:Ignorable="d">
+
+    <WindowsFormsHost x:Name="RDCHost" />
 </UserControl>
