--- a/Source/RDCManager/Views/ShellView.xaml
+++ b/Source/RDCManager/Views/ShellView.xaml
@@ -11,6 +11,9 @@
                 <Button x:Name="ShowRDCList" Style="{StaticResource MaterialDesignFlatButton}" Width="50" Height="50" Margin="0,30,0,0" Padding="0">
                     <materialDesign:PackIcon Kind="Group" Width="32" Height="32" Foreground="White" />
                 </Button>
+                <Button x:Name="ShowRDCSession" Style="{StaticResource MaterialDesignFlatButton}" Width="50" Height="50" Margin="0,30,0,0" Padding="0">
+                    <materialDesign:PackIcon Kind="WindowMaximize" Width="32" Height="32" Foreground="White" />
+                </Button>
                 <Button x:Name="StopCurrentRDC" Style="{StaticResource MaterialDesignFlatButton}" Width="50" Height="50" Margin="0,30,0,0" Padding="0">
                     <materialDesign:PackIcon Kind="Stop" Width="32" Height="32" Foreground="White" />
                 </Button>
