--- a/Source/RDCManager/Views/RDCSessionView.xaml
+++ b/Source/RDCManager/Views/RDCSessionView.xaml
@@ -12,7 +12,8 @@
     <DockPanel>
         <Grid>
             <ContentControl Content="{Binding SelectedRDC.Session}" Visibility="{Binding SelectedRDC.IsRunning, Converter={StaticResource BooleanToVisiblityConverter}}" />
-            <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
+            <TextBlock Text="Nothing to see here..." FontSize="20" Foreground="LightGray" HorizontalAlignment="Center" VerticalAlignment="Center" Visibility="{Binding NoSelectedRDC, Converter={StaticResource BooleanToVisiblityConverter}}" />
+            <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" Visibility="{Binding StoppedRDC, Converter={StaticResource BooleanToVisiblityConverter}}">
                 <Grid>
                     <Grid.RowDefinitions>
                         <RowDefinition Height="*" />
@@ -24,19 +25,19 @@
                         <ColumnDefinition Width="*" />
                     </Grid.ColumnDefinitions>
                     <StackPanel Grid.Row="0" Grid.Column="0">
-                        <TextBox Text="{Binding SelectedRDC.DisplayName, Mode=TwoWay}" Height="30" Width="250" materialDesign:HintAssist.Hint="Display Name" />
+                        <TextBox Text="{Binding SelectedRDC.DisplayName, Mode=TwoWay}" Style="{StaticResource MaterialDesignFloatingHintTextBox}" Width="250" materialDesign:HintAssist.Hint="Display Name" />
                     </StackPanel>
                     <StackPanel Grid.Row="0" Grid.Column="2">
-                        <TextBox Text="{Binding SelectedRDC.MachineName, Mode=TwoWay}" Height="30" Width="250" materialDesign:HintAssist.Hint="Machine Name" />
+                        <TextBox Text="{Binding SelectedRDC.MachineName, Mode=TwoWay}" Style="{StaticResource MaterialDesignFloatingHintTextBox}" Width="250" materialDesign:HintAssist.Hint="Machine Name" />
                     </StackPanel>
                     <StackPanel Grid.Row="1" Grid.Column="0" Margin="0,10,0,0">
-                        <TextBox Text="{Binding SelectedRDC.Username, Mode=TwoWay}" Height="30" Width="250" materialDesign:HintAssist.Hint="Username" />
+                        <TextBox Text="{Binding SelectedRDC.Username, Mode=TwoWay}" Style="{StaticResource MaterialDesignFloatingHintTextBox}" Width="250" materialDesign:HintAssist.Hint="Username" />
                     </StackPanel>
                     <StackPanel Grid.Row="1" Grid.Column="2" Margin="0,10,0,0">
-                        <TextBox Text="{Binding SelectedRDC.Password, Mode=TwoWay}" Height="30" Width="250" materialDesign:HintAssist.Hint="Password" />
+                        <TextBox Text="{Binding SelectedRDC.Password, Mode=TwoWay}" Style="{StaticResource MaterialDesignFloatingHintTextBox}" Width="250" materialDesign:HintAssist.Hint="Password" />
                     </StackPanel>
                 </Grid>
-                <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,20,0,0">
+                <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,30,0,0">
                     <Button x:Name="Delete" Width="50" Height="50" Background="#0747a6" Padding="0">
                         <materialDesign:PackIcon Kind="Delete"  Width="32" Height="32" />
                     </Button>
