--- a/Source/RDCManager/Views/RDCSettingsView.xaml
+++ b/Source/RDCManager/Views/RDCSettingsView.xaml
@@ -26,9 +26,9 @@
                             <StackPanel Orientation="Horizontal">
                                 <materialDesign:PackIcon Kind="Account" Width="40" Height="40" VerticalAlignment="Center" Foreground="White" Margin="10" VerticalContentAlignment="Center" />
                                 <StackPanel Margin="10" Width="150">
-                                    <TextBox Style="{StaticResource MaterialDesignFloatingHintTextBox}" materialDesign:HintAssist.Hint="Name" />
-                                    <TextBox Style="{StaticResource MaterialDesignFloatingHintTextBox}" materialDesign:HintAssist.Hint="Username" />
-                                    <TextBox Style="{StaticResource MaterialDesignFloatingHintTextBox}" materialDesign:HintAssist.Hint="Password" />
+                                    <TextBox Text="{Binding Name, Mode=TwoWay}" Style="{StaticResource MaterialDesignFloatingHintTextBox}" materialDesign:HintAssist.Hint="Name" Foreground="White" />
+                                    <TextBox Text="{Binding Username, Mode=TwoWay}" Style="{StaticResource MaterialDesignFloatingHintTextBox}" materialDesign:HintAssist.Hint="Username" Foreground="White" />
+                                    <TextBox Text="{Binding Password, Mode=TwoWay}" Style="{StaticResource MaterialDesignFloatingHintTextBox}" materialDesign:HintAssist.Hint="Password" Foreground="White" />
                                 </StackPanel>
                             </StackPanel>
                         </Grid>
@@ -36,8 +36,14 @@
                 </ListView.ItemTemplate>
             </ListView>
         </Border>
-        <StackPanel HorizontalAlignment="Right" Margin="0,30,0,0">
-            <Button x:Name="NewAccount" Width="50" Height="50" Background="#0747a6" Padding="0">
+        <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Margin="0,30,0,0">
+            <Button x:Name="Delete" Width="50" Height="50" Background="#0747a6" Padding="0">
+                <materialDesign:PackIcon Kind="Delete" Width="32" Height="32" />
+            </Button>
+            <Button x:Name="Save" Width="50" Height="50" Background="#0747a6" Padding="0" Margin="30,0,0,0">
+                <materialDesign:PackIcon Kind="ContentSave" Width="32" Height="32" />
+            </Button>
+            <Button x:Name="NewAccount" Width="50" Height="50" Background="#0747a6" Padding="0" Margin="30,0,0,0">
                 <materialDesign:PackIcon Kind="NewBox" Width="32" Height="32" />
             </Button>
         </StackPanel>
