--- a/Source/RDCManager/Views/ShellView.xaml
+++ b/Source/RDCManager/Views/ShellView.xaml
@@ -5,23 +5,26 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              mc:Ignorable="d" >
-    <DockPanel>
-        <Grid DockPanel.Dock="Left" Background="#0747a6">
-            <StackPanel>
-                <Button x:Name="ShowRDCList" Style="{StaticResource MaterialDesignFlatButton}" Width="50" Height="50" Margin="0,30,0,0" Padding="0">
-                    <materialDesign:PackIcon Kind="MonitorMultiple" Width="32" Height="32" Foreground="White" />
-                </Button>
-                <Button x:Name="ShowRDCSession" Style="{StaticResource MaterialDesignFlatButton}" Width="50" Height="50" Margin="0,30,0,0" Padding="0">
-                    <materialDesign:PackIcon Kind="Monitor" Width="32" Height="32" Foreground="White" />
-                </Button>
-                <Button x:Name="StopCurrentRDC" Style="{StaticResource MaterialDesignFlatButton}" Width="50" Height="50" Margin="0,30,0,0" Padding="0">
-                    <materialDesign:PackIcon Kind="Stop" Width="32" Height="32" Foreground="White" />
-                </Button>
-                <Button x:Name="ShowSettings" Style="{StaticResource MaterialDesignFlatButton}" Width="50" Height="50" Margin="0,30,0,0" Padding="0">
-                    <materialDesign:PackIcon Kind="Account" Width="32" Height="32" Foreground="White" />
-                </Button>
-            </StackPanel>
-        </Grid>
-        <ContentControl x:Name="ActiveItem" />
-    </DockPanel>
+    <Grid>
+        <DockPanel>
+            <Grid DockPanel.Dock="Left" Background="#0747a6">
+                <StackPanel>
+                    <Button x:Name="ShowRDCList" Style="{StaticResource MaterialDesignFlatButton}" Width="50" Height="50" Margin="0,30,0,0" Padding="0">
+                        <materialDesign:PackIcon Kind="MonitorMultiple" Width="32" Height="32" Foreground="White" />
+                    </Button>
+                    <Button x:Name="ShowRDCSession" Style="{StaticResource MaterialDesignFlatButton}" Width="50" Height="50" Margin="0,30,0,0" Padding="0">
+                        <materialDesign:PackIcon Kind="Monitor" Width="32" Height="32" Foreground="White" />
+                    </Button>
+                    <Button x:Name="StopCurrentRDC" Style="{StaticResource MaterialDesignFlatButton}" Width="50" Height="50" Margin="0,30,0,0" Padding="0">
+                        <materialDesign:PackIcon Kind="Stop" Width="32" Height="32" Foreground="White" />
+                    </Button>
+                    <Button x:Name="ShowSettings" Style="{StaticResource MaterialDesignFlatButton}" Width="50" Height="50" Margin="0,30,0,0" Padding="0">
+                        <materialDesign:PackIcon Kind="Account" Width="32" Height="32" Foreground="White" />
+                    </Button>
+                </StackPanel>
+            </Grid>
+            <ContentControl x:Name="ActiveItem" />
+        </DockPanel>
+        <materialDesign:Snackbar MessageQueue="{Binding SnackbarMessageQueue}" />
+    </Grid>
 </UserControl>
