--- a/Source/RDCManager/Controls/RDCWindow.xaml
+++ b/Source/RDCManager/Controls/RDCWindow.xaml
@@ -3,7 +3,10 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:ctrl="clr-namespace:RDCManager.Controls"
              mc:Ignorable="d">
-
-    <WindowsFormsHost x:Name="RDCHost" />
+    
+    <WindowsFormsHost HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+        <ctrl:RDCWinForm x:Name="RDCWinForm" Dock="Fill" />
+    </WindowsFormsHost>
 </UserControl>
