--- a/Source/RDCManager/Views/RDCSettingsView.xaml
+++ b/Source/RDCManager/Views/RDCSettingsView.xaml
@@ -9,7 +9,7 @@
     <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
         <TextBlock Text="User Accounts" Style="{StaticResource MaterialDesignDisplay1TextBlock}" Margin="0,0,0,30" Foreground="LightGray" />
         <Border BorderBrush="LightGray" BorderThickness="1">
-            <ListView ItemsSource="{Binding Accounts}" SelectedItem="{Binding SelectedAccount}" MinWidth="750" MaxWidth="750" MinHeight="400">
+            <ListView ItemsSource="{Binding Accounts}" SelectedItem="{Binding SelectedAccount}" MinWidth="750" MaxWidth="750" MinHeight="400" MaxHeight="400">
                 <ListView.ItemsPanel>
                     <ItemsPanelTemplate>
                         <WrapPanel Orientation="Horizontal" MaxWidth="750"></WrapPanel>
