--- a/Source/RDCManager/Views/RDCSessionView.xaml
+++ b/Source/RDCManager/Views/RDCSessionView.xaml
@@ -12,7 +12,7 @@
     </UserControl.Resources>
     <Grid>
         <ContentControl Content="{Binding SelectedRDC.Session}" Visibility="{Binding SelectedRDC.IsRunning, Converter={StaticResource BooleanToVisiblityConverter}}" />
-        <TextBlock Text="Nothing to see here..." FontSize="20" Foreground="LightGray" HorizontalAlignment="Center" VerticalAlignment="Center" Visibility="{Binding NoSelectedRDC, Converter={StaticResource BooleanToVisiblityConverter}}" />
+        <TextBlock Text="Choose an rdc to get started..." Foreground="LightGray" HorizontalAlignment="Center" VerticalAlignment="Center" Style="{StaticResource MaterialDesignHeadlineTextBlock}" Visibility="{Binding NoSelectedRDC, Converter={StaticResource BooleanToVisiblityConverter}}" />
         <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" Visibility="{Binding StoppedRDC, Converter={StaticResource BooleanToVisiblityConverter}}">
             <TextBlock Text="RDC Settings" Style="{StaticResource MaterialDesignDisplay1TextBlock}" Margin="0,0,0,30" Foreground="LightGray" />
             <StackPanel>
