Show warning dialog when deleting items

--- a/Source/RDCManager/Views/ShellView.xaml
+++ b/Source/RDCManager/Views/ShellView.xaml
@@ -26,5 +26,10 @@
             <ContentControl x:Name="ActiveItem" />
         </DockPanel>
         <materialDesign:Snackbar MessageQueue="{Binding SnackbarMessageQueue}" />
+        <materialDesign:DialogHost>
+            <materialDesign:DialogHost.DialogContent>
+                <ContentControl />
+            </materialDesign:DialogHost.DialogContent>
+        </materialDesign:DialogHost>
     </Grid>
 </UserControl>
