--- a/Source/RDCManager/Controls/RDCWindow.xaml
+++ b/Source/RDCManager/Controls/RDCWindow.xaml
@@ -7,6 +7,6 @@
              mc:Ignorable="d">
     
     <WindowsFormsHost HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
-        <ctrl:RDCWinForm x:Name="RDCWinForm" Dock="Fill" />
+        <ctrl:RDCWinForm x:Name="RDCWinForm" />
     </WindowsFormsHost>
 </UserControl>
