--- a/Source/RDCManager/Views/ShellView.xaml
+++ b/Source/RDCManager/Views/ShellView.xaml
@@ -18,8 +18,11 @@
                     <Button x:Name="StopCurrentRDC" Style="{StaticResource MaterialDesignFlatButton}" Width="50" Height="50" Margin="0,30,0,0" Padding="0">
                         <materialDesign:PackIcon Kind="Stop" Width="32" Height="32" Foreground="White" />
                     </Button>
-                    <Button x:Name="ShowSettings" Style="{StaticResource MaterialDesignFlatButton}" Width="50" Height="50" Margin="0,30,0,0" Padding="0">
+                    <Button x:Name="ShowUserAccounts" Style="{StaticResource MaterialDesignFlatButton}" Width="50" Height="50" Margin="0,30,0,0" Padding="0">
                         <materialDesign:PackIcon Kind="Account" Width="32" Height="32" Foreground="White" />
+                    </Button>
+                    <Button x:Name="ShowRDCGroups" Style="{StaticResource MaterialDesignFlatButton}" Width="50" Height="50" Margin="0,30,0,0" Padding="0">
+                        <materialDesign:PackIcon Kind="Group" Width="32" Height="32" Foreground="White" />
                     </Button>
                 </StackPanel>
             </Grid>
